@@ -2,6 +2,8 @@ Revision history for Perl extension Nagios::MKLivestatus.
 
 0.29  Mon Dec 28 00:11:53 CET 2009
 	- retain order of backends when merge outut
+	- renamed select_scalar_value to selectscalar_value
+	- fixed sums for selectscalar_value
 
 0.28  Sat Dec 19 19:19:13 CET 2009
 	- fixed bug in column alias
